UI: ড্যাশবোর্ডে সর্বমোট আয় কার্ড যুক্তকরণ এবং লেআউট ফিক্স

--- a/index.html
+++ b/index.html
@@ -159,11 +159,18 @@
                             <p>চলমান মোট বিনিয়োগ</p>
                         </div>
                     </div>
-                    <div class="stat-card info">
+                    <div class="stat-card success">
                         <div class="stat-icon">💵</div>
                         <div class="stat-info">
+                            <h3 id="totalIncome">৳০</h3>
+                            <p>সর্বমোট আয়</p>
+                        </div>
+                    </div>
+                    <div class="stat-card info">
+                        <div class="stat-icon">💸</div>
+                        <div class="stat-info">
                             <h3 id="totalExpenditure">৳০</h3>
-                            <p>সর্বমোট ব্যয়ের পরিমাণ</p>
+                            <p>সর্বমোট ব্যয়</p>
                         </div>
                     </div>
                 </div>
