ড্যাশবোর্ড স্ট্যাটাস কার্ড সোয়াপ করা হয়েছে (আমানত হিরো সেকশনে এবং ব্যালেন্স কার্ডে)

--- a/index.html
+++ b/index.html
@@ -127,22 +127,22 @@
                 <!-- Hero Section -->
                 <div class="balance-hero">
                     <div class="balance-content">
-                        <p class="label">বর্তমান ব্যালেন্স</p>
-                        <h1 id="currentBalance">৳০</h1>
+                        <p class="label">সর্বমোট আমানত</p>
+                        <h1 id="totalDeposits">৳০</h1>
                         <p class="sub-label">সর্বশেষ আপডেট: <span id="lastUpdate">এখন</span></p>
                     </div>
                     <div class="balance-icon">
-                        ৳
+                        💰
                     </div>
                 </div>
 
                 <!-- Stats Grid -->
                 <div class="stats-grid compact">
                     <div class="stat-card success">
-                        <div class="stat-icon">💰</div>
+                        <div class="stat-icon">৳</div>
                         <div class="stat-info">
-                            <h3 id="totalDeposits">৳০</h3>
-                            <p>সর্বমোট আমানত</p>
+                            <h3 id="currentBalance">৳০</h3>
+                            <p>বর্তমান ব্যালেন্স</p>
                         </div>
                     </div>
                     <div class="stat-card danger">
