সাইডবারে ইউজারের ছবি এবং নাম অটোমেটিক আপডেট করার ব্যবস্থা করা হয়েছে

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
             </div>
 
             <div class="user-profile-mini" id="openProfileBtn">
-                <div class="user-avatar">👤</div>
+                <div class="user-avatar" id="sidebarAvatar">
+                    <img id="sidebarPhoto" src="" alt="Profile" style="display: none;">
+                    <span id="sidebarDefaultAvatar">👤</span>
+                </div>
                 <div class="user-info">
                     <h4 id="currentUserName">ব্যবহারকারী</h4>
                     <p id="currentUserRole">অ্যাডমিন</p>
