ড্যাশবোর্ডে সর্বমোট সহায়তা কার্ড যুক্ত এবং লেআউট পরিবর্তন করা হয়েছে

--- a/index.html
+++ b/index.html
@@ -180,6 +180,13 @@
                             <p>সর্বমোট ব্যয়</p>
                         </div>
                     </div>
+                    <div class="stat-card warning">
+                        <div class="stat-icon">🤝</div>
+                        <div class="stat-info">
+                            <h3 id="totalDonation">৳০</h3>
+                            <p>সর্বমোট সহায়তা</p>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Dashboard Main Grid -->
